--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "markdown-it": "^14.1.0"
   },
   "dependencies": {
+    "@11ty/eleventy-plugin-rss": "^2.0.3",
     "dotenv": "^16.4.7"
   }
 }
